more header links

--- a/_config.yml
+++ b/_config.yml
@@ -16,16 +16,17 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html", title: "Home"}
+  # - {file: "index.html", title: "Home"}   # dont need since name redirects to home anyway
   - {file: "README.md", title: "About Me"}
-  - {file: "alecgoedinghaus.pdf", title: "Resume"}
-  # - {file: "/projects", title: "Projects"}
+  - {file: "https://github.com/alecgoedinghaus/resume/blob/master/alecgoedinghaus.pdf", title: "Resume"}
+  - {file: "projects.md", title: "Projects"}
+  - {file: "courses.md", title: "Courses"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:alecgoedinghaus@ucla.edu"}
-  - {titel: LinkedIn, icon: linkedin, url: "https://linkedin.com/alecgoedinghaus"}
+  - {titel: LinkedIn, icon: linkedin, url: "https://linkedin.com/in/alecgoedinghaus"}
   - {title: Github, icon: github, url: "https://github.com/alecgoedinghaus"}
-  - {title: Instagram, icon: Instagram, url: "https://www.instagram.com/_aalleecc_/"}
+  - {title: Instagram, icon: instagram, url: "https://www.instagram.com/_aalleecc_/"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
