--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "resume"]
 	path = resume
-	url = https://github.com/alecgoedinghaus/resume
+	url = git://github.com/alecgoedinghaus/resume
