--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   # - {file: "index.html", title: "Home"}   # dont need since name redirects to home anyway
-  - {file: "README.md", title: "About Me"}
+  # - {file: "README.md", title: "About Me"}
   - {url: "/resume/alecgoedinghaus.pdf", title: "Resume"}
   - {file: "projects.md", title: "Projects"}
   - {file: "courses.md", title: "Courses"}
